M       cat_tst_qa.m

(1) Fixed:    Corrected error message handling in "cat_main_gcut" that now 
              throws an error if the brain mask is empty. 
(2) Fixed:    Corrected name/texture handling in "cat_surf_info".
(3) Fixed:    Small corrections in "cat_surf_render2".
(4) Fixed:    Corrected errors in "gii2fs" in "cat_surf_FreeSurfer".
(5) New:      Prepared creation of inner and outer surface in "cat_surf_parameter"
              and "cat_conf_stools" in developer mode.    
(6) New:      Added opengl info and data to CAT report in "cat_tst_qa".
(7) Fixed:    Small corrections in "cat_tst_cattest" and its batches.
              

------------------------------------------------------------------------
r1073 | gaser | 2016-11-10 15:57:30 +0100 (Do, 10 Nov 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

Fixed: Solved error when multiple surfaces were selected for just one hemipshere
in cat_surf_results.

------------------------------------------------------------------------
r1074 | gaser | 2016-11-11 12:21:54 +0100 (Fr, 11 Nov 2016) | 11 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_stools.m
M       cat_conf_tools.m
M       cat_surf_createCS.m
M       html/cat.html
M       html/cat_starting.html

Changed: Updated help text and quick starting guide.

------------------------------------------------------------------------
r1075 | gaser | 2016-11-11 12:33:00 +0100 (Fr, 11 Nov 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_stools.m
M       cat_conf_tools.m

Changed: Restricted load of xml-files for cat_stat_checkcov.m.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_results.m
M       html/cat.html

Fixed: Datatips were not reset in cat_surf_results.m
------------------------------------------------------------------------
r1076 | gaser | 2016-11-14 13:05:45