@@ -229,7 +229,7 @@ NCstr.strtype = 'r';
 NCstr.num     = [1 1];
 NCstr.def     = @(val)cat_get_defaults('extopts.NCstr', val{:});
 NCstr.help    = {
-  'Strengh of the SANLM noise correction. The default "inf" use an adaptive noise correction and was successfully tested on a variety of scans. Use smaller values (>0) for small changes and higher values (<=1) for stronger denoising. The value 0 will turn off any noise correction!'
+  'Strengh of the SANLM noise correction. The default "inf" uses an adaptive noise correction and was successfully tested on a variety of scans. Use smaller values (>0) for small changes and higher values (<=1) for stronger denoising. The value 0 will turn off any noise correction!'
 ''
 };
 
